# hcocena

./: .Rbuildignore  .dockerignore  .gitignore  DESCRIPTION  Dockerfile  NAMESPACE  NEWS.md  README.md  hcocena_main.Rmd  hcocena_main_seq_only.Rmd  hcocena_plot_showcase.Rmd  hcocena_satellite.Rmd  install_hcocena.R  install_versioned_dependencies.R  pyproject.toml
R/: AllClasses.R  AllGenerics.R  AllValidity.R  aaa_rng_helpers.R  add_column_annotation.R  alluvial_plots.R  build_integrated_network.R  celltype_activity_decoupler.R  celltype_annotation.R  check_dirs.R  check_tf.R  cluster_calculation.R  cluster_pca.R  colour_single_cluster.R  cutoff_plot.R  cytoscape.R  define_layers.R  enriched_keys.R  export_clustering.R  find_hubs.R  functional_enrichment.R  get_cluster_scores.R  hc_api.R  hc_auto_tune_cutoff_tiered.R  hc_converters.R  hc_legacy_helpers.R  hc_longitudinal_endotypes.R  hc_longitudinal_legacy_exact.R  hc_longitudinal_quick.R  hc_module_function_gemini.R  hc_plot_celltype_annotation_matrix.R  hc_reference_data.R  hc_tune_resolution.R  highlight_geneset.R  import_clusters.R  init_object.R  init_save_folder.R  init_wd.R  merge_clusters.R  meta_correlation.R  (+30 more)
STAR_protocol/: hcocena_main_STARprotocol.Rmd
docker/: Dockerfile  README.md
hCoCena-r-package/: DESCRIPTION  NAMESPACE  NEWS.md
hcocena_py/: __init__.py  cli.py  clustering.py  data.py  hcocena.py  network.py  visualization.py
inst/: CITATION
legacy_rmd/: hcocena_main_globalstate_legacy.Rmd  hcocena_main_starprotocol_v1_legacy.Rmd
man-roxygen/: example-hc-after-part1.R  example-hc-clustered.R  (+6 more)
(+367 files in other folders)
